project summary update

--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,13 @@
                         class="project-github-icon" src="images/icons/github.svg" /></a></p>
         </div>
         <div class="bubble project-subheading text-center">
+            <h5 class="project">ASTERIA</h5>
+            <p>A C# Unity project for a 2D tower defense game, where the user defends from the enemy types.</p>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/asteria.git"><img title="Asteria on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
             <h5 class="project">SPOCK ROCK GAME</h5>
             <p>A JavaScript web project to create a rock paper scissors lizard spock game.</p>
             <video class="project-video" src="./videos/spock.mp4" controls poster="images/projects/spock.png">
@@ -134,7 +141,7 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">LACHELLE-ANNE.COM</h5>
-            <p>A Static HTML website created to display my portfolio, including demos of my projects and a blog.</p>
+            <p>A Static HTML website created to display my portfolio, including project demos and a blog.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
                     href="https://github.com/lachelle-anne/lachelle-anne.github.io.git"><img
                         title="lachelle-anne.com on GitHub" class="project-github-icon"
@@ -144,7 +151,8 @@
         </h5>
         <div class="bubble project-subheading text-center">
             <h5 class="project">TUNE IT</h5>
-            <p>A collaboration with <a title="jasperdunn" href="https://github.com/jasperdunn">Jasper</a> on an
+            <p>A collaboration with <a title="jasperdunn" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/jasperdunn">Jasper</a> on an
                 instrument tuning React application,
                 designing the user interface of this project using React & Typescript.</p>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
@@ -153,7 +161,8 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">ARKSCRIBE</h5>
-            <p>A C# collaboration with <a title="Necropixel15616" href="https://github.com/Necropixel15616">Jacob</a> on
+            <p>A C# collaboration with <a title="Necropixel15616" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/Necropixel15616">Jacob</a> on
                 a
                 breeding tracker for the game Ark: Survival Evolved,
                 designing the interface of this project with WPF.</p>
@@ -163,8 +172,8 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">THE NAV BAR</h5>
-            <p>An ASP.NET core MVC collaboration with <a title="Necropixel15616"
-                    href="https://github.com/Necropixel15616">Jacob</a> on a
+            <p>An ASP.NET core MVC collaboration with <a title="Necropixel15616" target="_blank"
+                    rel="noopener noreferrer" href="https://github.com/Necropixel15616">Jacob</a> on a
                 reservation system for restaurants, enabling management of bookings and processing reservations. Guest,
                 member and admin roles have been created to manage and restrict different sections within the system.
                 This was a project completed for the Diploma of Software Development at TAFE NSW.</p>
