--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=17" rel="stylesheet" />
+    <link href="styles.css?v=18" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -110,6 +110,8 @@
                     <span></span>
                 </div>
             </div>
+            <a class="link" style="margin-top: 40px;" href="./documents/Lachelle_Pavlovic.pdf" download>Click to
+                download my CV!</a>
         </div>
         <div class="column">
             <h5 class="subtitle">EDUCATION
