home page update and css

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=19" rel="stylesheet" />
+    <link href="styles.css?v=20" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -44,8 +44,7 @@
             <h6 class="text-center">A&emsp;G R A D U A T E S&emsp;G U I D E&emsp;T O</h6>
             <h3 class="text-center">D E V E L O P I N G</h3>
         </div>
-        <button type="button" class="collapsible">PART ONE: Learning Styles & Resources<img class="dropdown-icon"
-                src="images/icons/circle-down-solid.svg" /></button>
+        <button type="button" class="collapsible">PART ONE: Learning Styles & Resources</button>
         <div class="content">
             <p>| By Lachelle Pavlovic | Sept 04, 2021 |</p>
             <p>When starting out, gaining access to educational content and identifying resources appropriate to your
@@ -100,8 +99,7 @@
                     href="https://www.tutorialsteacher.com/">TutorialsTeacher</a>
             </p>
         </div>
-        <button type="button" class="collapsible">PART TWO: Terms & Guidelines<img class="dropdown-icon"
-                src="images/icons/circle-down-solid.svg" /></button>
+        <button type="button" class="collapsible">PART TWO: Terms & Guidelines</button>
         <div class="content">
             <p>| By Lachelle Pavlovic | COMING SOON! |</p>
         </div>
