--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=19" rel="stylesheet" />
+    <link href="styles.css?v=20" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -40,26 +40,21 @@
         </div>
     </header>
     <div class="container">
-        <div class="heading-title">
-            <h3 class="text-center">L A C H E L L E</h3>
-            <h6 class="text-center">P A V L O V I C</h6>
-        </div>
-        <div class="text-center" style="justify-content: center; align-content: center;padding-top: 35px;">
-
-            <h1>WELCOME</h1>
-            <h5>TO MY</h5>
-            <h1>PAGE!</h1>
+        <div class="welcome text-center">
+            <h1 style="padding-bottom: 10px;">HELLO,</h1>
+            <h6>MY NAME IS</h6>
+            <h2>L A C H E L L E</h2>
+            <h5>P A V L O V I C</h5>
         </div>
         <div class="home-image-column">
             <img class="profile-image" src="images/profile_img.jpg" alt="lachelle-anne">
         </div>
         <div class="paragraph text-center">
-            <p>As a recent graduate from TAFE NSW, I aspire to gain experience and seek opportunities within the
-                industry to engage and work alongside a team of passionate developers.</p>
-            <p>Through gained knowledge from my studies, I have a greater understanding within full-stack
-                development
-                processes and have obtained soft
-                and technical skills to assist further in my career and education.</p>
+            <p>I'm a graduate developer with an interest in client-side web development.</p>
+            <p>After completing my Diploma in June 2021, I have been working on a range of projects to improve
+                my understanding and fluency in programming languages, IDE's and tools. I aspire to work among a team of passionate developers who share the same curiosity for
+                programming as I do!</p>
+            <p>Feel free to explore my portfolio, inclusive of my project repository links, demo videos and personal blog. </p>
         </div>
     </div>
     <footer class="footer">
