--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=20" rel="stylesheet" />
+    <link href="styles.css?v=21" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -41,7 +41,7 @@
     </header>
     <div class="container">
         <div class="column">
-            <h5 class="subtitle">SKILLS
+            <h5 class="subtitle text-center" style="padding: 15px;">SKILLS
             </h5>
             <div class="bar">
                 <div class="info">
@@ -64,6 +64,14 @@
                     <span>React</span>
                 </div>
                 <div class="progress-line react">
+                    <span></span>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <span>TypeScript</span>
+                </div>
+                <div class="progress-line typescript">
                     <span></span>
                 </div>
             </div>
@@ -107,11 +115,12 @@
                     <span></span>
                 </div>
             </div>
-            <a class="link" style="margin-top: 40px;" href="./documents/Lachelle_Pavlovic.pdf" download>Click to
+            <a class="link" style="margin-top: 40px;" href="./documents/Lachelle_Pavlovic.pdf"
+                download>Click to
                 download my CV!</a>
         </div>
         <div class="column">
-            <h5 class="subtitle">EDUCATION
+            <h5 class="subtitle text-center" style="padding: 15px;">EDUCATION
             </h5>
 
             <div class="education">
