--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=20" rel="stylesheet" />
+    <link href="styles.css?v=21" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -41,7 +41,7 @@
     </header>
     <div class="container">
         <div class="heading-title">
-            <h6 class="text-center">A&emsp;G R A D U A T E S&emsp;G U I D E&emsp;T O</h6>
+            <h6 class="text-center" style="padding-top: 20px;">A&emsp;G R A D U A T E S&emsp;G U I D E&emsp;T O</h6>
             <h3 class="text-center">D E V E L O P I N G</h3>
         </div>
         <button type="button" class="collapsible">PART ONE: Learning Styles & Resources</button>
