--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=20" rel="stylesheet" />
+    <link href="styles.css?v=21" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -41,20 +41,20 @@
     </header>
     <div class="container">
         <div class="welcome text-center">
-            <h1 style="padding-bottom: 10px;">HELLO,</h1>
-            <h6>MY NAME IS</h6>
-            <h2>L A C H E L L E</h2>
-            <h5>P A V L O V I C</h5>
+            <h1>L A C H E L L E</h1>
+            <h4>P A V L O V I C</h4>
         </div>
         <div class="home-image-column">
             <img class="profile-image" src="images/profile_img.jpg" alt="lachelle-anne">
         </div>
         <div class="paragraph text-center">
+            <p>Hello and welcome to my page!</p>
             <p>I'm a graduate developer with an interest in client-side web development.</p>
             <p>After completing my Diploma in June 2021, I have been working on a range of projects to improve
-                my understanding and fluency in programming languages, IDE's and tools. I aspire to work among a team of passionate developers who share the same curiosity for
+                my understanding and fluency in programming languages, IDE's and tools. I aspire to work among a team of
+                passionate developers who share the same curiosity for
                 programming as I do!</p>
-            <p>Feel free to explore my portfolio, inclusive of my project repository links, demo videos and personal blog. </p>
+            <p>~Happy coding!</p>
         </div>
     </div>
     <footer class="footer">
