--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=20" rel="stylesheet" />
+    <link href="styles.css?v=21" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -41,7 +41,7 @@
     </header>
     <div class="container">
         <div class="heading-title">
-            <h3 class="text-center">P R O J E C T S</h3>
+            <h3 class="text-center" style="padding: 20px;">P R O J E C T S</h3>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">MUSIC PLAYER</h5>
@@ -147,8 +147,9 @@
                         title="lachelle-anne.com on GitHub" class="project-github-icon"
                         src="images/icons/github.svg" /></a></p>
         </div>
-        <h5 class="subtitle" style="padding-top: 20px;">COLLABORATIONS
-        </h5>
+        <div class="heading-title">
+            <h3 class="text-center" style="padding: 20px;">COLLABORATIONS</h3>
+        </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">TUNE IT</h5>
             <p>A collaboration with <a title="jasperdunn" target="_blank" rel="noopener noreferrer"
