--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
     <div class="container">
         <div class="heading-title">
             <h6 class="text-center" style="padding-top: 20px;">A&emsp;G R A D U A T E S&emsp;G U I D E&emsp;T O</h6>
-            <h3 class="text-center">D E V E L O P I N G</h3>
+            <h3 class="text-center" style="padding-bottom: 20px;">D E V E L O P I N G</h3>
         </div>
         <button type="button" class="collapsible">PART ONE: Learning Styles & Resources</button>
         <div class="content">
