about page content and styling

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=21" rel="stylesheet" />
+    <link href="styles.css?v=22" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -45,33 +45,9 @@
             </h5>
             <div class="bar">
                 <div class="info">
-                    <span>HTML</span>
-                </div>
-                <div class="progress-line html">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>CSS</span>
-                </div>
-                <div class="progress-line css">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
                     <span>JavaScript</span>
                 </div>
                 <div class="progress-line javascript">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>React</span>
-                </div>
-                <div class="progress-line react">
                     <span></span>
                 </div>
             </div>
@@ -101,23 +77,28 @@
             </div>
             <div class="bar">
                 <div class="info">
-                    <span>Google Analytics</span>
+                    <span>CSS</span>
                 </div>
-                <div class="progress-line google-analytics">
+                <div class="progress-line css">
                     <span></span>
                 </div>
             </div>
             <div class="bar">
                 <div class="info">
-                    <span>React Native</span>
+                    <span>HTML</span>
                 </div>
-                <div class="progress-line react-native">
+                <div class="progress-line html">
                     <span></span>
                 </div>
             </div>
-            <a class="link" style="margin-top: 40px;" href="./documents/Lachelle_Pavlovic.pdf"
-                download>Click to
-                download my CV!</a>
+            <div class="bubble" style="margin-top: 30px; padding: 20px;">
+                <h6>LIBRARIES</h6>
+                <p>jQuery, React</p>
+                <h6>FRAMEWORKS</h6>
+                <p>Bootstrap, ASP.NET, React Native</p>
+                <h6>TOOLS</h6>
+                <p>Google Analytics, Git</p>
+            </div>
         </div>
         <div class="column">
             <h5 class="subtitle text-center" style="padding: 15px;">EDUCATION
@@ -144,6 +125,8 @@
                     <p>Completed Certificate</p>
                 </div>
             </div>
+            <a class="link" style="margin-top: 20px;" href="./documents/Lachelle_Pavlovic.pdf" download>Click to
+                download my CV!</a>
         </div>
     </div>
     <footer class="footer">
