--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=22" rel="stylesheet" />
+    <link href="styles.css?v=23" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -77,52 +77,40 @@
             </div>
             <div class="bar">
                 <div class="info">
-                    <span>CSS</span>
+                    <span>HTML / CSS</span>
                 </div>
-                <div class="progress-line css">
-                    <span></span>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>HTML</span>
-                </div>
-                <div class="progress-line html">
+                <div class="progress-line html-css">
                     <span></span>
                 </div>
             </div>
             <div class="bubble" style="margin-top: 30px; padding: 20px;">
-                <h6>LIBRARIES</h6>
-                <p>jQuery, React</p>
-                <h6>FRAMEWORKS</h6>
-                <p>Bootstrap, ASP.NET, React Native</p>
-                <h6>TOOLS</h6>
-                <p>Google Analytics, Git</p>
+                <h6 class="skills-type">LIBRARIES</h6>
+                <p class="skills">jQuery, React</p>
+                <h6 class="skills-type">FRAMEWORKS</h6>
+                <p class="skills">Bootstrap, ASP.NET, React Native</p>
+                <h6 class="skills-type">TOOLS / SERVICES</h6>
+                <p class="skills">Google Analytics, Git</p>
             </div>
         </div>
         <div class="column">
             <h5 class="subtitle text-center" style="padding: 15px;">EDUCATION
             </h5>
-
             <div class="education">
                 <div class="bubble">
                     <p>DIPLOMA IN SOFTWARE DEVELOPMENT 2021</p>
                     <p><b>TAFE NSW</b></p>
-                    <p>Completed Certificate</p>
                 </div>
             </div>
             <div class="education">
                 <div class="bubble">
                     <p>CERTIFICATE IV IN PROGRAMMING 2020</p>
                     <p><b>TAFE NSW</b></p>
-                    <p>Completed Certificate</p>
                 </div>
             </div>
             <div class="education">
                 <div class="bubble">
                     <p>CERTIFICATE IN WORKFORCE ESSENTIALS 2016</p>
                     <p><b>Charles Sturt University</b></p>
-                    <p>Completed Certificate</p>
                 </div>
             </div>
             <a class="link" style="margin-top: 20px;" href="./documents/Lachelle_Pavlovic.pdf" download>Click to
