--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lachelle Pavlovic</title>
-    <link href="styles.css?v=23" rel="stylesheet" />
+    <link href="styles.css?v=24" rel="stylesheet" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203236141-1"></script>
@@ -42,6 +42,19 @@
     <div class="container">
         <div class="heading-title">
             <h3 class="text-center" style="padding: 20px;">P R O J E C T S</h3>
+        </div>
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">LIGHT DARK MODE</h5>
+            <p>A JavaScript web project to make a website able to switch between a light mode and dark mode theme.</p>
+            <video class="project-video" src="./videos/light-dark-mode.mp4" controls poster="./images/projects/light-dark-mode.png">
+                <script>
+                    var video = document.currentScript.parentElement;
+                    video.volume = 0.3;
+                </script>
+            </video>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/light-dark-mode.git"><img title="Light Dark Mode on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">MUSIC PLAYER</h5>
@@ -89,7 +102,14 @@
                     href="https://github.com/lachelle-anne/calculator.git"><img title="Calculator on GitHub"
                         class="project-github-icon" src="images/icons/github.svg" /></a></p>
         </div>
-
+        <div class="bubble project-subheading text-center">
+            <h5 class="project">LACHELLE-ANNE.COM</h5>
+            <p>A Static HTML website created to display my portfolio, including project demos and a blog.</p>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/lachelle-anne.github.io.git"><img
+                        title="lachelle-anne.com on GitHub" class="project-github-icon"
+                        src="images/icons/github.svg" /></a></p>
+        </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">NOTEPAD</h5>
             <p>A React.js application to write and store notes locally. This was a project completed for the Diploma of
@@ -137,14 +157,6 @@
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
                     href="https://github.com/lachelle-anne/order-management-system.git"><img
                         title="Order Management System on GitHub" class="project-github-icon"
-                        src="images/icons/github.svg" /></a></p>
-        </div>
-        <div class="bubble project-subheading text-center">
-            <h5 class="project">LACHELLE-ANNE.COM</h5>
-            <p>A Static HTML website created to display my portfolio, including project demos and a blog.</p>
-            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/lachelle-anne.github.io.git"><img
-                        title="lachelle-anne.com on GitHub" class="project-github-icon"
                         src="images/icons/github.svg" /></a></p>
         </div>
         <div class="heading-title">
