--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
         </div>
         <div class="bubble project-subheading text-center">
             <h5 class="project">LIGHT DARK MODE</h5>
-            <p>A JavaScript web project tohave the website switch between a light and dark mode theme.</p>
+            <p>A JavaScript web project where you can switch between a light and dark mode theme.</p>
             <video class="project-video" src="./videos/light-dark-mode.mp4" controls poster="./images/projects/light-dark-mode.png">
                 <script>
                     var video = document.currentScript.parentElement;
