--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,19 @@
             <h3 class="text-center" style="padding: 20px;">P R O J E C T S</h3>
         </div>
         <div class="bubble project-subheading text-center">
+            <h5 class="project">NOTE BOARD</h5>
+            <p>A JavaScript web project to create a note board, featuring drag and drop functionality.</p>
+            <video class="project-video" src="./videos/note-board.mp4" controls poster="./images/projects/note-board.png">
+                <script>
+                    var video = document.currentScript.parentElement;
+                    video.volume = 0.3;
+                </script>
+            </video>
+            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
+                    href="https://github.com/lachelle-anne/note-board.git"><img title="Note Board on GitHub"
+                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
+        </div>
+        <div class="bubble project-subheading text-center">
             <h5 class="project">LIGHT DARK MODE</h5>
             <p>A JavaScript web project where you can switch between a light and dark mode theme.</p>
             <video class="project-video" src="./videos/light-dark-mode.mp4" controls poster="./images/projects/light-dark-mode.png">
@@ -70,13 +83,6 @@
                         class="project-github-icon" src="images/icons/github.svg" /></a></p>
         </div>
         <div class="bubble project-subheading text-center">
-            <h5 class="project">ASTERIA</h5>
-            <p>A C# Unity project for a 2D tower defense game, where the user defends from the enemy types.</p>
-            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/asteria.git"><img title="Asteria on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
-        </div>
-        <div class="bubble project-subheading text-center">
             <h5 class="project">SPOCK ROCK GAME</h5>
             <p>A JavaScript web project to create a rock paper scissors lizard spock game.</p>
             <video class="project-video" src="./videos/spock.mp4" controls poster="images/projects/spock.png">
@@ -87,19 +93,6 @@
             </video>
             <p><a class="project-link" target="_blank" rel="noopener noreferrer"
                     href="https://github.com/lachelle-anne/spock-rock-game.git"><img title="Spock Rock Game on GitHub"
-                        class="project-github-icon" src="images/icons/github.svg" /></a></p>
-        </div>
-        <div class="bubble project-subheading text-center">
-            <h5 class="project">CALCULATOR</h5>
-            <p>A JavaScript web project for a simple calculator.</p>
-            <video class="project-video" src="./videos/calculator.mp4" controls poster="images/projects/calculator.png">
-                <script>
-                    var video = document.currentScript.parentElement;
-                    video.volume = 0.3;
-                </script>
-            </video>
-            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/calculator.git"><img title="Calculator on GitHub"
                         class="project-github-icon" src="images/icons/github.svg" /></a></p>
         </div>
         <div class="bubble project-subheading text-center">
@@ -143,21 +136,8 @@
                         src="images/icons/github.svg" /></a></p>
         </div>
         <div class="bubble project-subheading text-center">
-            <h5 class="project">ORDER MANAGEMENT SYSTEM</h5>
-            <p>A C# desktop application to create and manage orders. This was a project completed for the Certificate IV
-                in
-                Programming at TAFE NSW.</p>
-            <video class="project-video" src="./videos/order-system.mp4" controls
-                poster="images/projects/order-system.png">
-                <script>
-                    var video = document.currentScript.parentElement;
-                    video.volume = 0.3;
-                </script>
-            </video>
-            <p><a class="project-link" target="_blank" rel="noopener noreferrer"
-                    href="https://github.com/lachelle-anne/order-management-system.git"><img
-                        title="Order Management System on GitHub" class="project-github-icon"
-                        src="images/icons/github.svg" /></a></p>
+            <h6><a class="link" target="_blank" rel="noopener noreferrer"
+                href="https://github.com/lachelle-anne">See more projects on GitHub!</a></h6>
         </div>
         <div class="heading-title">
             <h3 class="text-center" style="padding: 20px;">COLLABORATIONS</h3>
